Day16Assignment/style.css
* {
  padding: 0%;
  margin: 0%;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

html, body {
  height: 100%;
  width: 100%;
  background-color: rgba(44, 39, 29, 0.853);
}

.main {
  height: 100%;
  width: 100%;
  padding: 20px;
  display: flex;
  gap: 20px;
  flex-wrap: nowrap;
  overflow-x: auto;
  }

  .main::-webkit-scrollbar {
    display: none;
  }

.card {
  flex-shrink: 0;
  height: 350px;
  width: 300px;
  background-color: aquamarine;
  border-radius: 15px;
  position: relative;
  overflow: hidden;
}

.card img{
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.card .bottom {
  height: 40%;
  width: 100%;
  background: linear-gradient(transparent, black);
  position: absolute;
  border-radius: 10px 10px 0;
  bottom: -40%;
  transition: all ease 0.4s;
  color: white;
  padding: 20px;
}

.bottom .title{
  padding-top: 25px;
  display: flex;
  color: aliceblue;
  justify-content: space-between;
}

.title i{
  background-color: aliceblue;
  color: palevioletred;
  padding: 5px;
  border-radius: 10px;
}

.bottom p{
  font-weight: 100;
  font-size: 12px;
}

.card:hover .bottom {
  bottom: 0%;
}

